refactor: use lazy props for EwDeviceSpec